完成自己使用的定制化，包括配色更改和自定义keyboard shortcuts

--- a/src/renderer/assets/styles/vars.css
+++ b/src/renderer/assets/styles/vars.css
@@ -1,19 +1,19 @@
 :root {
-  --theme-color-1: #3cbef6;
+  --theme-color-1: #f1f1f1;
   --theme-color-1-l98: color(var(--theme-color-1) l(98%));
   --theme-color-1-l96: color(var(--theme-color-1) l(96%));
   --theme-color-1-l94: color(var(--theme-color-1) l(94%));
   --theme-color-1-l90: color(var(--theme-color-1) l(90%));
   --theme-color-1-l60: color(var(--theme-color-1) l(60%));
   --theme-color-1-l40: color(var(--theme-color-1) l(40%));
-  --theme-color-2: lightseagreen;
+  --theme-color-2: rgb(58,102,200);
   --theme-color-3: #ece71f;
   /*--theme-color-3: #fffa20;*/
-  --border-color-1: #e4e7ed;
-  --border-color-2: #f0f4fd;
-  --bg-color-1: #f5f7fa;
+  --border-color-1: #ffffff;
+  --border-color-2: #ffffff;
+  --bg-color-1: #ffffff;
 
-  --font-family-1: BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
+  --font-family-1: PingFang SC, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
   --font-family-2: BlinkMacSystemFont, Roboto, sans-serif;
 
   --sb-min-width: 242px;
